plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '2.7.4'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "io.freefair.lombok" version "6.5.1"
    id 'org.beryx.runtime' version '1.12.7'
    id 'java-library'
}

group 'com.catwithawand'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.0'
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.catwithawand.synchordia.ApplicationLauncher'
    applicationName = 'Synchordia'
}

javafx {
    version = '17.0.2'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.media', 'javafx.swing']
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot:2.7.5'
    implementation 'org.springframework.boot:spring-boot-autoconfigure:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.7.5'

    implementation 'com.miglayout:miglayout-core:11.0'
    implementation 'com.miglayout:miglayout-javafx:11.0'
    implementation 'com.catwithawand:BorderlessSceneFX:1.0.0'

    implementation 'org.hsqldb:hsqldb:2.7.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'io.github.typhon0:AnimateFX:1.2.3'
    implementation 'de.schlegel11:jfxanimation:2.0.0'
    implementation 'net.jthink:jaudiotagger:3.0.1'
    implementation 'net.coobird:thumbnailator:0.4.18'

    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-material2-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fluentui-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-remixicon-pack:12.3.1'

    implementation 'org.jetbrains:annotations:23.0.0'

    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    runtimeOnly 'org.apache.logging.log4j:log4j-layout-template-json:2.19.0'

    implementation 'org.fusesource.jansi:jansi:2.4.0'

    implementation 'net.raumzeitfalle.fx:scenic-view:11.0.2'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

run {
    applicationDefaultJvmArgs = ['--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
                                 '--add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
                                 '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                                 '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']

    jvmArgs = ['--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
               '--add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
               '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
               '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
}

runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
}
